--- a/README
+++ b/README
@@ -1,5 +1,14 @@
 Greenhost directives
 
+OpenVPN Monitor Service 
+
+net stop ovpnmon
+net start ovpnmon
+
+sc delete ovpnmon
+
+
+C:\openvpnd>net start ovpnmon
 #check-url <url>
    URL to open after connection is initialized, so that it is possible to check status from the user's browser
 #vpn-gateway-address <ip address>
