--- a/README
+++ b/README
@@ -1,47 +1,57 @@
-Viper (c) 2013 Greenhost VOF and friends
+Viper : Internet-over-OpenVPN software for Windows
+
 https://www.greenhost.io/projects/viper
 
+
 == What is Viper?
-Viper is a easy to use program for windows that helps users in configuring a hardened environment for VPN access. The emphasis is on ease of use and accuracy in reporting the state of the connection.
 
-Viper works best together with [Uman], a server-side open source VPN web-based management interface also released by Greenhost VOF. See our (https://www.greenhost.io open source projects) for more information on Uman. Although Viper and Uman are designed to work together, Viper is in fact a generic OpenVPN client, so you can use it to connect to any OpenVPN server.
+Viper is an OpenVPN client for Windows, designed for directing all traffic over a VPN connection. Viper has a strong emphasis on ease-of-use and accuracy in reporting the state of the VPN.
 
-== How does it work?
-Viper wraps around the configuration and command line interface of the open source OpenVPN package and provides a simple GUI in the Windows system tray that allows for easy control and monitoring of the connection status.
+Although it's already more carefully written than most 'security' software, we consider Viper to be in pre-release 'beta' status. As with all software, you should be circumspect about the security it provides.
 
-Viper uses the OpenVPN management socket to poll connection status.
 
 == Why another VPN client?
-We evaluated the most popular OpenVPN clients and found them lacking in one way or another. But most specially we wanted a client that could guide inexperienced users on best practices to keep safe.
 
-Connection is reported as secure only when the kernel routing tables indicate that packages are correctly routed through the VPN gateway. This is cross-checked with OpenVPN's internal status report to make sure that the lock icons is shown when we really mean to say that the connection is secured.
+We wanted to build software designed specifically for directing all Internet traffic over the VPN. This is an important application of VPN technology, for people who are using Internet connections with filtering and surveillance risks. Common open-source OpenVPN Windows clients are not designed for this purpose.
 
-Since version R7 Viper supports auto-configuration of the Windows Firewall
-to block IPv6 traffic for clients in networks with IPv6 configured. This
-prevents Viper user's from accidentally leaking their IPv6 addresses in the case of a IPv6-based attack.
 
-It is recommended that you run Viper with an active Windows Firewall to take advantage of the afore mentioned feature.
+== How does it work?
+
+Viper wraps the open-source OpenVPN command line tool, providing a simple GUI in the Windows system tray that allows for control and monitoring of the connection status.
+
+Viper reports the connection as secure only when the VPN gateway is designated as the route to the Internet. To accomplish this, Viper continuously checks the kernel's IP routing table against OpenVPN's internal status. Viper's lock icon is shown only when it really mean to say that the connection is secured.
+
+
+== What is missing?
+
+Viper does not include an OpenVPN client configuration -- you must create you own. The configuration directive "redirect-gateway def1 bypass-dhcp" must be used to establish the routes which will cause Internet traffic to be directed over the VPN. The directive "management localhost 7505" must be used to allow Viper to monitor the VPN.
+
+Viper does not (yet) block communications with the local network segment where the client computer is connected. An OpenVPN client configuration directive such as "dhcp-option DNS n.n.n.n" (where n.n.n.n is a trusted DNS resolver) should be used to ensure that a DNS resolver on the local network segment is not used. A more complete mitigation of this issue in in the works.
+
+Viper does not (yet) support IPv6. Since version R7, Viper configures the Windows Firewall to block all IPv6 traffic while the VPN is connected. If the Windows Firewall is not available, Viper will refuse to connect and present an explanatory dialog. Support for IPv6-over-IPv4 tunnelling is in the works.
+
 
 == How can I contribute to Viper?
-Viper is a new development and like all new developments it is likely to have some teething problems. I would very much appreciate bug reports from your tests.
 
-If you wish to join the development of Viper, please continue reading for help on how to set up a development environments.
+Viper is a new development, and like all pre-release software it is likely to have bugs. I would very much appreciate bug reports from your tests. If you wish to join the development of Viper, please continue reading for help on how to set up a development environments.
+
 
 == Notes for developers
-Viper is written in Python with some bits and pieces in C#. To build Viper you must have Microsoft's .NET SDK 3.5, used for external utils such as the firewall command line interface and Active State's Python 2.7.5.
 
-There's no need for a Microsoft IDE, I have successfully compiled the C# utils using the open source SharpDevelop IDE.
+Viper is written in Python with some bits and pieces in C#. To build Viper you must have Microsoft's .NET SDK 3.5, used for external utilities such as the firewall CLI and Active State's Python 2.7.5.
 
-Due to compatibility issues between Python virtual environments and the Python Windows APIs it is recommended that you do not create a virtualenv
-for Viper, as you would normally do for any new development in Python.
+There's no need for a Microsoft IDE. I have successfully compiled the C# utilities using the open-source SharpDevelop IDE.
 
-Have a look at the build script build.bat to see how the different elements
-of a release are built together.
+Due to compatibility issues between Python virtual environments and the Python Windows APIs, it is recommended that you do not create a Python virtualenv for Viper (as you might normally do for any new development in Python).
 
-All build products are output to the dist directory where the installer script expects them.
+Have a look at the build script 'build.bat' to see how the different elements of a release are built together.
 
-NSIS Studio was used to generate the build script and it is recommended that you use this tool to generate the installer from the provided ''.nssp file''.
+All build products are output to the 'dist' directory where the installer script expects them.
 
-You can install the python dependencies using the requirements file provided:
-
+You can install the Python dependencies using the requirements file provided:
 :\> pip install -r third-party\requirements.txt
+
+NSIS Studio is used to generate the installer script for binary releases of Viper. You can use NSIS Studio to generate the installer yourself from the provided 'viper-mamba-installer-TAP.nssp' file. See: http://nsis.sourceforge.net/NSIS_Studio
+
+This distribution of Viper contains binary files in the 'third-party' directory from the OpenVPN project. You may replace them with (or compare tham against) official files from the OpenVPN project. See: http://openvpn.net/index.php/download/community-downloads.html
+
