--- a/AUTHORS
+++ b/AUTHORS
@@ -2,10 +2,12 @@ Viper is a project developed by Greenhost with the support of the Institute for 
 
         https://greenhost.net
         https://greenhost.io
+        http://www.iwpr.net
 
 
 Development:
         Luis Fernández <luis[at]greenhost.nl>
+        Simon Engelsman <simon[at]greenhost.nl>
 
 Research:
         Anatole Shaw <ash[at]greenhost.nl>
